# repropack

./: .gitignore  AGENTS.md  Cargo.toml  PACKET-SPEC.md  README.md  REPLAY.md  SECURITY.md  TESTING.md  codecov.yml  justfile
.github/workflows/: ci.yml  coverage.yml
.kiro/specs/repropack-v02-alpha/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/repropack-v03-beta/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
crates/repropack-capture/: Cargo.toml
crates/repropack-capture/src/: lib.rs
crates/repropack-capture/tests/: size_cap_props.rs
crates/repropack-cli/: Cargo.toml
crates/repropack-cli/src/: main.rs
crates/repropack-cli/tests/: scenarios.rs  smoke.rs
crates/repropack-git/: Cargo.toml
crates/repropack-git/src/: lib.rs
crates/repropack-git/tests/: delta_props.rs
crates/repropack-model/: Cargo.toml
crates/repropack-model/src/: lib.rs  validate.rs
crates/repropack-model/tests/: malformed.rs  schema_props.rs  serde_props.rs
crates/repropack-pack/: Cargo.toml
crates/repropack-pack/src/: lib.rs
crates/repropack-pack/tests/: integrity_props.rs  malformed.rs  pack_props.rs
crates/repropack-render/: Cargo.toml
crates/repropack-render/src/: lib.rs
crates/repropack-replay/: Cargo.toml
crates/repropack-replay/src/: lib.rs
crates/repropack-replay/tests/: delta_drift_props.rs  env_props.rs  evidence_props.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: architecture.md  scenario_index.md
docs/ci/: coverage.md
examples/: manifest.sample.json  receipt.sample.json
examples/github-actions/: repropack-capture.yml
schema/: manifest-v1.schema.json  receipt-v1.schema.json
