[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
