[package]
name = "repropack-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
serde_json.workspace = true
tempfile.workspace = true
repropack-git = { path = "../repropack-git" }
repropack-model = { path = "../repropack-model" }
repropack-pack = { path = "../repropack-pack" }
repropack-render = { path = "../repropack-render" }
walkdir.workspace = true
