[package]
name = "repropack-model"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
