[package]
name = "repropack-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
walkdir.workspace = true
repropack-model = { path = "../repropack-model" }

[dev-dependencies]
proptest.workspace = true
